kubernetes/infrastructure/workloads/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    operator.1password.io/auto-restart: "true"
