kubernetes/infrastructure/workloads/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  annotations:
    gethomepage.dev/description: GitOps Controller
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Workloads
    gethomepage.dev/icon: argo-cd.png
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/pod-selector: ""
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  hostnames:
    - argocd.costanza.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
